--- a/proyecto/catalogo.html
+++ b/proyecto/catalogo.html
@@ -341,6 +341,84 @@
         </div>
       </div>
 
+      <!-- Producto 15 -->
+      <div class="item">
+        <figure><img src="producto15.jpg" alt="Chococat"></figure>
+        <div class="info-product">
+          <h2>Chococat</h2>
+          <h3>$500.00</h3>
+          <div class="botones-producto">
+            <button onclick="location.href='producto15.html'">Ver más</button>
+            <button onclick="agregarAlCarrito('Chococat', 500)">Agregar al carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 16 -->
+      <div class="item">
+        <figure><img src="producto16.jpg" alt="Totoro"></figure>
+        <div class="info-product">
+          <h2>Totoro</h2>
+          <h3>$500.00</h3>
+          <div class="botones-producto">
+            <button onclick="location.href='producto16.html'">Ver más</button>
+            <button onclick="agregarAlCarrito('Totoro', 500)">Agregar al carrito</button>
+          </div>
+        </div>
+      </div>
+
+       <!-- Producto 17 -->
+      <div class="item">
+        <figure><img src="producto17.jpg" alt="Rata"></figure>
+        <div class="info-product">
+          <h2>Rata</h2>
+          <h3>$100.00</h3>
+          <div class="botones-producto">
+            <button onclick="location.href='producto17.html'">Ver más</button>
+            <button onclick="agregarAlCarrito('Rata', 100)">Agregar al carrito</button>
+          </div>
+        </div>
+      </div>
+
+       <!-- Producto 18 -->
+      <div class="item">
+        <figure><img src="producto18.jpg" alt="Rana"></figure>
+        <div class="info-product">
+          <h2>Rana</h2>
+          <h3>$280.00</h3>
+          <div class="botones-producto">
+            <button onclick="location.href='producto18.html'">Ver más</button>
+            <button onclick="agregarAlCarrito('Rana', 280)">Agregar al carrito</button>
+          </div>
+        </div>
+      </div>
+
+       <!-- Producto 19 -->
+      <div class="item">
+        <figure><img src="producto19.jpg" alt="rilakkuma"></figure>
+        <div class="info-product">
+          <h2>rilakkuma</h2>
+          <h3>$320.00</h3>
+          <div class="botones-producto">
+            <button onclick="location.href='producto19.html'">Ver más</button>
+            <button onclick="agregarAlCarrito('rilakkuma', 320)">Agregar al carrito</button>
+          </div>
+        </div>
+      </div>
+
+<!-- Producto 20 -->
+      <div class="item">
+        <figure><img src="producto20.jpg" alt="Pareja de osos"></figure>
+        <div class="info-product">
+          <h2>Pareja de osos</h2>
+          <h3>$200.00</h3>
+          <div class="botones-producto">
+            <button onclick="location.href='producto20.html'">Ver más</button>
+            <button onclick="agregarAlCarrito('Pareja de osos', 200)">Agregar al carrito</button>
+          </div>
+        </div>
+      </div>
+
     </div>
     </center>
   </main>
@@ -399,6 +477,17 @@
       { nombre: "Raton", precio: "$50.00", enlace: "producto7.html", imagen: "producto7.jpg" },
       { nombre: "Doraemon", precio: "$250.00", enlace: "producto8.html", imagen: "producto8.jpg" },
       { nombre: "Tortuga", precio: "$120.00", enlace: "producto9.html", imagen: "producto9.jpg" },
+      {nombre: "Conejito", precio: "$50.00", enlace: "producto10.html", imagen: "producto10.jpg" },
+      { nombre: "Oso rosa", precio: "$150.00", enlace: "producto11.html", imagen: "producto11.jpg" },
+      { nombre: "Kirby", precio: "$250.00", enlace: "producto12.html", imagen: "producto12.jpg" },
+      { nombre: "Cerdo minecraft", precio: "$400.00", enlace: "producto13.html", imagen: "producto13.jpg" },
+      { nombre: "Vaca", precio: "$200.00", enlace: "producto14.html", imagen: "producto14.jpg" },
+      { nombre: "Chococat", precio: "$500.00", enlace: "producto15.html", imagen: "producto15.jpg" },
+      { nombre: "Totoro", precio: "$500.00", enlace: "producto16.html", imagen: "producto16.jpg" },
+      { nombre: "Rata", precio: "$100.00", enlace: "producto17.html", imagen: "producto17.jpg" },
+      { nombre: "Rana", precio: "$280.00", enlace: "producto18.html", imagen: "producto18.jpg" },
+      { nombre: "rilakkuma", precio: "$220.00", enlace: "producto19.html", imagen: "producto19.jpg" },
+      { nombre: "Parejita de osos", precio: "$100.00", enlace: "producto20.html", imagen: "producto20.jpg" },
     ];
 
     const buscador = document.getElementById("buscador");
